🔑 Add API Key authentication support
admin_app.py:
- Now supports both API key AND email/password auth
- Priority: API key (simpler) → fallback to email/password
- No login needed with API key (faster, no token expiration)

.streamlit/secrets.toml.example:
- Updated with API key option (recommended)
- Email/password as fallback

Usage in Streamlit Secrets:
[shiprocket]
api_key = "YOUR_API_KEY_HERE"

--- a/.streamlit/secrets.toml.example
+++ b/.streamlit/secrets.toml.example
@@ -2,5 +2,9 @@
 # Copy this to your Streamlit Cloud app settings → Secrets
 
 [shiprocket]
-email = "openclawd12@gmail.com"
-password = "Kluzo@1212"
+# Option 1: Use API Key (Recommended - simpler, no expiration)
+api_key = "S#2sT^kcC1GIDU2&NUwIdyLv0ZTMHOhj"
+
+# Option 2: Use Email/Password (Fallback - if API key doesn't work)
+# email = "openclawd12@gmail.com"
+# password = "Kluzo@1212"
