📊 Add sample data for dashboard sections

--- a/public/tasks/tasks.json
+++ b/public/tasks/tasks.json
@@ -1,5 +1,31 @@
 {
-  "tasks": [],
+  "tasks": [
+    {
+      "id": "task-001",
+      "title": "Ship morning batch",
+      "description": "Process all NEW orders from overnight",
+      "priority": "high",
+      "status": "done",
+      "created_at": "2026-02-16T09:00:00",
+      "completed_at": "2026-02-16T09:30:00"
+    },
+    {
+      "id": "task-002",
+      "title": "Check inventory levels",
+      "description": "Review SKU stock for low items",
+      "priority": "medium",
+      "status": "open",
+      "created_at": "2026-02-16T10:00:00"
+    },
+    {
+      "id": "task-003",
+      "title": "Update courier priorities",
+      "description": "Adjust courier selection based on performance",
+      "priority": "low",
+      "status": "open",
+      "created_at": "2026-02-16T11:00:00"
+    }
+  ],
   "columns": ["open", "in_progress", "done"],
-  "updated_at": null
+  "updated_at": "2026-02-16T23:20:00"
 }
