Fix: deleted tasks no longer reappear on refresh
- load_local_tasks() now returns None only when no file exists (first run)
- Empty list [] means user deleted all tasks - respected on reload
- Fixed Kanban column height to fixed 400px
- Tasks scroll within fixed container

--- a/public/tasks/tasks.json
+++ b/public/tasks/tasks.json
@@ -1,7 +1,3 @@
 {
-  "tasks": [
-    {"id": 1, "title": "Check inventory levels", "status": "todo", "priority": "medium", "category": "shiprocket", "desc": ""},
-    {"id": 2, "title": "Update courier priorities", "status": "todo", "priority": "low", "category": "other", "desc": ""},
-    {"id": 3, "title": "Ship morning batch", "status": "done", "priority": "high", "category": "shiprocket", "desc": ""}
-  ]
+  "tasks": []
 }
