--- a/local_tasks.json
+++ b/local_tasks.json
@@ -1,1 +1,10 @@
-[]
+[
+  {
+    "id": 1,
+    "title": "test me hi on telegram",
+    "status": "done",
+    "priority": "high",
+    "category": "other",
+    "desc": "test me hi on telegram"
+  }
+]
