Remove Archive column, make tasks scrollable
- 3 columns: TO DO, IN PROGRESS, DONE
- Scrollable task area with styled scrollbar
- Removed archive column

--- a/public/tasks/tasks.json
+++ b/public/tasks/tasks.json
@@ -7,6 +7,14 @@
       "priority": "high",
       "category": "other",
       "desc": "test me hi on telegram"
+    },
+    {
+      "id": 2,
+      "title": "Ship orders buddy ",
+      "status": "todo",
+      "priority": "high",
+      "category": "shiprocket",
+      "desc": "Ship orders buddy "
     }
   ]
 }
