--- a/local_tasks.json
+++ b/local_tasks.json
@@ -6,5 +6,13 @@
     "priority": "high",
     "category": "other",
     "desc": "test me hi on telegram"
+  },
+  {
+    "id": 2,
+    "title": "Ship orders buddy ",
+    "status": "done",
+    "priority": "high",
+    "category": "shiprocket",
+    "desc": "Ship orders buddy "
   }
 ]
